--- a/assets/style.css
+++ b/assets/style.css
@@ -18,13 +18,16 @@
         margin-bottom: 20px;
         margin-top: 20px;
     }
-    
+
     #inputAccueil{ /*   */
         background-color: #dad8d8;
-        width: 250px;
+        width: auto;
         margin-bottom: 40px;
         }
-    
+    #choixCommune {
+        width: auto;
+    }
+
     .map { /* Taille de la map */
         margin: 0 auto;
         height: 250px;
@@ -42,7 +45,7 @@
         border-radius: 50%;
         line-height: 150px;
         box-shadow: 2px 2px 3px #16232E;
-    }   
+    }
     #microBouton{
         width: 60%;
     }
@@ -60,6 +63,37 @@
         margin-top: 10px;
         margin-right: 17px;
     }
+    /*Page commune ============================================*/
 
-       
+    #commune {
+      text-align: center;
+      width: 100%;
+      margin-bottom: 5vh;
+    }
+    .buttonJourNuit {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      text-align: center;
+      justify-content: center;
+      width: 100%;
+      margin-top: 5vh;
+    }
+    #buttonJour {
+      margin-right: 15vh;
+      padding: 15px 20px 15px 20px;
+      width: auto;
+      background-color: #007bff;
+      color: white;
+      font-size: 1.5em;
+      border: none;
+    }
+    #buttonNuit {
+      padding: 15px 20px 15px 20px;
+      width: auto;
+      background-color: #007bff;
+      font-size: 1.5em;
+      color: white;
+      border: none;
+    }
 }
