--- a/assets/style.css
+++ b/assets/style.css
@@ -7,16 +7,29 @@
 
 @media screen and (max-width: 768px){
 
+
+    body{
+        margin:0 !important;
+        padding:0 !important;
+    }
  /*.......................................Header..............................................*/
     .header{
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
+        background-color:#20c997;
     }
+    .header > a {
+        text-transform: uppercase;
+        color:white;
+        text-decoration: none;
+    }
+
 
     /*....................................Page d'accueil.....................................*/
     #titreAccueil{
         margin-bottom: 20px;
         margin-top: 20px;
+        font-family: 'Ubuntu', sans-serif;
     }
     
     #inputAccueil{ /*   */
@@ -30,7 +43,28 @@
         height: 250px;
         width: 250px;
         margin-bottom: 15px;
+        margin-top:15px;
        }
+    #parentListeDeroulante{
+        margin-bottom: 20px;
+        display:flex;
+        width: 250px;
+        margin: 0 auto;
+        justify-content: space-between;
+        height: 40px;
+    }
+    #mySelect{
+        background-color: #dcd9d9;
+        width: 80%;
+    }
+    #ok{
+        width: 15%;
+        background-color: #26263c;
+        color: white;
+    }
+
+
+    }
 
     /*.................................Page enregistrer son ....................................*/
     #parentMicro{
@@ -61,5 +95,61 @@
         margin-right: 17px;
     }
 
+
+    /* .......................formulaire...........  */
+
+    #formInscription{
+        display: flex;
+        flex-direction: column;
+    }
+    .input{
+        margin-bottom:10px;
+    }
+    #parentInput{
+        background-color: #39D1B4;
+        display: flex;
+        width: 250px;
+        height: auto;
+        padding: 20px;
+        margin: 0 auto;
+    }
+    #boutonAjout{
+        width: 150px;
+    }
+    
+
+    /*....................Commune.......................*/
+
+    #commune {
+        text-align: center;
+        width: 100%;
+        margin-bottom: 5vh;
+      }
+      .buttonJourNuit {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        width: 100%;
+        margin-top: 5vh;
+      }
+      #buttonJour {
+        margin-right: 15vh;
+        padding: 15px 20px 15px 20px;
+        width: auto;
+        background-color: #007bff;
+        color: white;
+        font-size: 1.5em;
+        border: none;
+      }
+      #buttonNuit {
+        padding: 15px 20px 15px 20px;
+        width: auto;
+        background-color: #007bff;
+        font-size: 1.5em;
+        color: white;
+        border: none;
+      }
        
 }
